# PhiInfo

./: .gitignore  PhiInfo.sln  README.md  THIRD-PARTY-NOTICES.md
.github/workflows/: dotnet.yml  native.yml
docs/: addressables.md
src/: .editorconfig
src/PhiInfo.Android/: AndroidManifest.xml  PhiInfo.Android.csproj  PhiInfoScheme.cs  PhiInfoService.cs  packages.lock.json
src/PhiInfo.CLI/: Export.cs  HttpServer.cs  Local.cs  PhiInfo.CLI.csproj  Program.cs  Tool.cs  rd.xml
src/PhiInfo.Core/: AssetProvider.cs  CatalogProvider.cs  Extensions.cs  FieldProvider.cs  InfoProvider.cs  IsExternalInit.cs  PhiInfo.Asset.cs  PhiInfo.Base.cs  PhiInfo.Catalog.cs  PhiInfo.Core.csproj  PhiInfo.Extract.cs  PhiInfo.Utils.cs  PhiInfoContext.cs  Type.cs  core.cs  type.cs
src/PhiInfo.Core/Asset/: AssetProvider.cs  CatalogParser.cs  IAssetDataProvider.cs
src/PhiInfo.Core/Info/: Type.cs  (+3 more)
src/PhiInfo.HttpServer/: PhiInfo.HttpServer.cs  PhiInfo.HttpServer.csproj
src/PhiInfo.NativeAPI/: PhiInfo.NativeAPI.csproj  PhiInfoNativeApi.cs  README.md  Type.cs
src/PhiInfo.NativeAPI/rust/phi_info_bridge/: Cargo.toml  build.rs
src/PhiInfo.NativeAPI/rust/phi_info_bridge/src/: lib.rs  test.rs
src/PhiInfo.NativeAPI/rust/phi_info_bridge/src/node/: mod.rs  phi_info_bridge.d.ts
src/PhiInfo.NativeAPI/rust/phi_info_bridge/src/python/: mod.rs  phi_info_bridge.pyi
src/PhiInfo.Processing/: PhiInfo.Processing.csproj  PhiInfoDecoders.cs  PhiInfoExport.cs  PhiInfoHttpServer.cs  PhiInfoRouter.cs  Type.cs
src/Shua.Zip/: Extensions.cs  Shua.Zip.Mmap.cs  Shua.Zip.cs  Shua.Zip.csproj  Type.cs
(+15 files in other folders)
